--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "memwatch": "x"
     },
 
+    "devDependencies": {
+        "nodeunit": "0.9.x",
+        "nodeunit-httpclient": "0.2.x"
+    },
+
     "engines": {
         "node": "0.10.x",
         "npm": "1.2.x"
