--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
-script: node unittest-runner.js
+before_install:
+  - "npm install -g eslint"
+script:
+  - "eslint ."
+  - "node unittest-runner.js"
 services:
 - redis-server
 deploy:
