--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ script:
   - "node unittest-runner.js"
 services:
 - redis-server
+cache:
+  directories:
+    - node_modules
+# http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
+sudo: false
 deploy:
   provider: heroku
   app: lokki
