--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gcm": "x",
     "mpns": "x",
     "node-uuid": "1.4.x",
+    "convict": "^0.6.1",
     "redis": "x",
     "sendgrid": "0.4.x",
     "validator": "2.0.x"
