--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 before_install:
-  - "npm install -g eslint"
+  - npm install -g eslint
 script:
-  - "eslint ."
-  - "node unittest-runner.js"
+  - eslint .
+  - node unittest-runner.js
 services:
-- redis-server
+  - redis-server
 cache:
   directories:
     - node_modules
@@ -17,4 +17,4 @@ deploy:
   on:
     repo: TheSoftwareFactory/lokki-server
   api_key:
-    secure: gWWnIwTXbjjWbhp1+n58WoTyD8kSpNyt9QCN/3VVnjtFN8Pdan2Jtc95CCawg0LR6URC71qXc/eRUeDgHnkptYstnEnVzLkC9yHuKidLswuQuiwVgJreivFRZAxw7PibCxmgLYpGSkIpT4VOG4lTSiVPBL9Y+rhBNlc9WfXxz0w=
+    secure: "g6gB8FPrEFIbzRKB16VwpuaObu4m53gnHLG+b5dUXBajVWC6qs2IhxUAH4Hkgo+HMEoWcEYlcbefZx6qNHX0yK6T4nqWoZ1K42BEWQWzQ6J7lk0DCJzOdHG8PM+sjByFphUtOJxasNsjJrfX1gQ9TxrCfSbdtDiP9JXukYGbA7s="
