--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "engines": {
     "node": "0.10.x",
     "npm": "1.2.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheSoftwareFactory/lokki-server.git"
   }
 }
