--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 before_install:
   - npm install -g eslint
+  - npm install -g complexity-report
 script:
   - eslint .
+  - cp .
   - node unittest-runner.js
 services:
   - redis-server
