--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tracer": "^0.7.3",
     "validator": "2.0.x",
     "method-override": "2.3.5",
-    "body-parser": "~1.13.3"
+    "body-parser": "~1.13.3",
+    "suspend": "^0.7.0"
   },
   "devDependencies": {
     "nodeunit": "0.9.x",
