--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 before_install:
   - npm install -g eslint
   - npm install -g complexity-report
+env:
+  es6: true
 script:
   - eslint .
   - cr . -x /node_modules
