Make complexity-report ignore syntax errors
Because cr doesn't support ES6, it sees ES6 features as syntax errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ env:
   es6: true
 script:
   - eslint .
-  - cr . -x /node_modules
+    # complexity-report can't deal with ES6, so ignore parse errors
+  - cr --ignoreerrors . -x /node_modules  
   - node unittest-runner.js
 services:
   - redis-server
